refactor(core): 用 Apache Fory JSON 替换 Jackson
宿主侧 Jackson 在 Boot 4 上换到 tools.jackson 坐标/包名，组件复用宿主 ObjectMapper 的
做法会让自动配置在 Boot 4 直接装配失败。改为组件自带 JSON 实现，宿主不再需要提供
Jackson 或 ObjectMapper bean。

- 依赖：org.apache.fory:fory-json:1.7.1（compile 传递，随 Boot BOM 之外的版本由本组件定）
- 新增 core/json/ForyJsons 共享配置：writeNullFields(true)，日志字段集合不随内容抖动
- JacksonOperateLogSerializer → ForyOperateLogSerializer（不可序列化元素仍记占位符）
- JacksonSensitiveDataMasker → ForySensitiveDataMasker（在 JsonObject/JsonArray 树上递归
  替换；无命中时返回原文）
- DefaultOperateLogHandler 自持 ForyJson，不再需要构造参数
- 自动配置去掉 ObjectMapper 依赖与 ObjectProvider 兜底
- 测试侧改用 LogRecords（Fory 动态树）读日志，不再借宿主 Jackson
- README：新增「JSON 实现（Apache Fory）」小节，写明与宿主 Web 层输出差异
  （不读 Jackson 注解、私有字段也算属性、Date 走 epoch 毫秒），Boot 4 行改为可用但未认证

Co-authored-by: arena-agent <297053741+arena-agent@users.noreply.github.com>