@@ -39,7 +39,7 @@
 
 | 模块 | 说明 |
 | --- | --- |
-| `operate-log-core` | 核心：注解、AOP 切面、上下文模型（含 `extra` 自定义字段通道）、SpEL 引擎、序列化、脱敏、载荷防护（PayloadPolicy）、Handler / Resolver 扩展点。Java 8 基线；Spring 与 SLF4J 为 `optional`（版本由宿主 Boot 决定），仅 jackson-databind / aspectjweaver / commons-lang3 以 compile 传递（宿主不必然提供，且跨 Boot 2/3 二进制兼容） |
+| `operate-log-core` | 核心：注解、AOP 切面、上下文模型（含 `extra` 自定义字段通道）、SpEL 引擎、序列化、脱敏、载荷防护（PayloadPolicy）、Handler / Resolver 扩展点。Java 8 基线；Spring 与 SLF4J 为 `optional`（版本由宿主 Boot 决定），fory-json / aspectjweaver / commons-lang3 以 compile 传递（宿主不必然提供）。组件自带 JSON 实现，不依赖宿主 Jackson |
 | `operate-log-spring-boot-starter` | Boot 2.x / 3.x 双栈自动装配：`javax` / `jakarta` 两套 Servlet 解析实现按 classpath 自动选择，非 Web 环境兜底。Java 8 字节码，Boot 相关依赖全部 `provided` 零传递 |
 | `operate-log-test-boot2` | Boot 2.x 可运行示例（`javax` 栈冒烟） |
 | `operate-log-test-boot3` | Boot 3.x 可运行示例与全部集成用例（`jakarta` 栈，JDK 17+ 时自动纳入构建） |
@@ -58,7 +58,7 @@ Boot 2.x 与 3.x 使用同一坐标（Starter 本体为 Java 8 字节码；Boot 
 </dependency>
 ```
 
-> 要求宿主为 Web 应用（含 `ObjectMapper` Bean，Spring Boot Web 应用默认具备）。
+> 无额外要求：JSON 由组件自带的 Apache Fory 完成，宿主不需要提供 `ObjectMapper` Bean 或任何 Jackson 坐标。
 > 非 Web 环境（定时任务、后台服务）也能工作：HTTP 相关字段自动降级为 `null`。
 
 ### 2. 标注注解
@@ -284,7 +284,8 @@ Filter → DispatcherServlet → Interceptor#preHandle
 ## 敏感数据脱敏
 
 - 作用于 `requestHeaders`、`requestBody`、`responseBody` 三个 JSON 字符串字段。
-- 实现为 **JSON 树递归**（Jackson `ObjectNode`）：嵌套对象、数组、集合中的敏感字段全部命中，不限于顶层。
+- 实现为 **JSON 树递归**（Fory 的 `JsonObject` / `JsonArray`）：嵌套对象、数组、集合中的敏感字段全部命中，不限于顶层。
+- 一个敏感字段都没命中时返回原文，不做无谓的重写（避免数字与格式漂移）。
 - 字段名匹配**忽略大小写**（`Password` / `PASSWORD` / `password` 均脱敏）。
 - 命中字段的值替换为 `mask-text`（默认 `******`）。
 - 待脱敏内容非 JSON 或脱敏过程异常时**原样返回**，不阻断日志流程。
@@ -300,8 +301,8 @@ Filter → DispatcherServlet → Interceptor#preHandle
 | `OperatorResolver` | 匿名（返回 `null`） | 对接登录态，提供 `userId` / `userAccount` / `userName` |
 | `HttpContextResolver` | Starter 内置（`javax` / `jakarta` 自动选择） | 定制 HTTP 上下文采集（如接入非 Servlet 容器） |
 | `ClientIpResolver` | Starter 内置（含 `trust-proxy` 逻辑） | 定制客户端 IP 解析策略 |
-| `OperateLogSerializer` | `JacksonOperateLogSerializer`（复用宿主 `ObjectMapper`） | 更换序列化器（如 FastJSON、自定义日期格式） |
-| `SensitiveDataMasker` | `JacksonSensitiveDataMasker` | 定制脱敏规则（如手机号部分掩码 `138****1234`） |
+| `OperateLogSerializer` | `ForyOperateLogSerializer`（组件自带 Fory JSON，不用宿主 `ObjectMapper`） | 更换序列化器（如 Jackson、Gson、自定义日期格式） |
+| `SensitiveDataMasker` | `ForySensitiveDataMasker` | 定制脱敏规则（如手机号部分掩码 `138****1234`） |
 | `SpelEngine` | `DefaultSpelEngine`（LRU 表达式缓存，支持 `enabled` 直通降级） | 定制表达式引擎（如增加自定义函数） |
 | `PayloadPolicy` | 按 `operate-log.payload.*` 组装 | 定制载荷防护（自定义截断 / 忽略类型逻辑，注册 Bean 即覆盖） |
 
@@ -337,9 +338,9 @@ public OperateLogHandler operateLogHandler(OperateLogJdbcRepository repository) 
 
 ```java
 @Bean
-public SensitiveDataMasker sensitiveDataMasker(ObjectMapper mapper) {
-    SensitiveDataMasker base = new JacksonSensitiveDataMasker(mapper,
-            Set.of("mobile", "phone"), null);
+public SensitiveDataMasker operateLogSensitiveDataMasker() {
+    Set<String> fields = new HashSet<String>(Arrays.asList("mobile", "phone"));
+    SensitiveDataMasker base = new ForySensitiveDataMasker(fields, null);
     return json -> postProcess(base.mask(json)); // 在默认脱敏基础上追加自定义规则
 }
 ```
@@ -412,19 +413,38 @@ OperateLogAspect @Around 拦截
   （栈专属类型只在方法体内 `new`），因此条件未命中那一侧不会触发类加载失败。
 - Starter 的 Boot / Spring 相关编译依赖全部为 `provided`，不向宿主传递任何 Boot 2.7 坐标，与 Boot 3 宿主零冲突。
 - `operate-log-core` 中 Spring 与 SLF4J 为 `optional`（版本只用于 core 自身编译，
-  不进消费者依赖图），jackson-databind / aspectjweaver / commons-lang3 保留 compile 传递
-  （宿主不必然提供；其版本 == Boot 2.7.18 基线，不会反向压过宿主版本）。
+  不进消费者依赖图）；fory-json / aspectjweaver / commons-lang3 保留 compile 传递
+  （宿主不必然提供；后两者版本 == Boot 2.7.18 基线，不会反向压过宿主版本，
+  `fory-json` 不在 Boot BOM 内，由本组件定版，宿主可用自身 `dependencyManagement` 覆盖）。
   于是 Boot 2 宿主解析到 Spring 5.x、Boot 3 宿主解析到 Spring 6.x：宿主框架版本始终由宿主自己定，
   可分别用 `mvn -B -pl operate-log-test-boot2,operate-log-test-boot3 dependency:tree` 核对。
 - jakarta 栈编译期使用 Servlet API 5.0.0（Java 8 字节码），运行时兼容 Boot 3 提供的 6.0.0。
+
+## JSON 实现（Apache Fory）
+
+日志里的 JSON（`requestBody` / `responseBody` / `requestHeaders` / 记录本身）由 **Apache Fory JSON**
+（`org.apache.fory:fory-json`，1.7.1，支持 JDK 8+）生成，不经宿主 Jackson。
+这样 Boot 2（Jackson 2）、Boot 3（Jackson 2）、Boot 4（Jackson 3，包名已改为 `tools.jackson`）
+拿到的日志格式完全一致，也不会因宿主缺 `com.fasterxml` 的 `ObjectMapper` Bean 而装配失败。
+
+与宿主 Web 层输出的差异需要知道：
+
+- **不读 Jackson 注解**：`@JsonIgnore` / `@JsonProperty` / 命名策略 / 自定义 Module 对日志无效
+  （Fory 用自己的 `org.apache.fory.json.annotation`）。需要同样效果时自定义 `OperateLogSerializer` bean。
+- **属性集合更宽**：Fory 默认把类层级中的非静态字段（含私有）与 public getter 合并成属性，
+  因此比 Jackson 的默认可见性多记一些字段。
+- **时间形态**：`java.time` 走 ISO 文本，`java.util.Date` / `Calendar` 走 epoch 毫秒。
+- **空值仍输出**：记录里未赋值的字段以 `null` 出现（`writeNullFields(true)`），下游 schema 不随内容抖动。
+- **JDK 25+**：若禁用了 `sun.misc.Unsafe`，按 Fory 文档加
+  `--add-opens=java.base/java.lang.invoke=ALL-UNNAMED`。
 
 ## 支持的版本
 
 | 宿主 | 支持范围 | 验证基线（示例工程所用版本） | 说明 |
 | --- | --- | --- | --- |
 | Spring Boot 2.x | **2.2+ 全 2.x 线** | **Boot 2.7.18**（JDK 8 起，17 / 21 亦可） | 自动配置经 `spring.factories` 注册（Boot 2 全系一致）；2.0 / 2.1 理论可用（Spring < 5.2 忽略 `proxyBeanMethods` 属性，仅退化为 CGLIB 全代理），未列入认证范围；1.x 不支持 |
-| Spring Boot 3.x | **3.0 – 3.5 全 3.x 线** | **Boot 3.3.13**（JDK 17+，由 `boot3-test` profile 自动纳入） | `AutoConfiguration.imports` 注册机制自 3.0 起一致；所用 Spring / Jackson / Servlet API 均为跨小版本稳定面 |
-| Spring Boot 4.x | 未认证 | — | Framework 7 / Jackson 3 默认栈下 `com.fasterxml` `ObjectMapper` 可能缺 Bean，待评估后另行宣布 |
+| Spring Boot 3.x | **3.0 – 3.5 全 3.x 线** | **Boot 3.3.13**（JDK 17+，由 `boot3-test` profile 自动纳入） | `AutoConfiguration.imports` 注册机制自 3.0 起一致；所用 Spring / Servlet API 均为跨小版本稳定面 |
+| Spring Boot 4.x | 可用，未认证 | — | Boot 4 把默认 JSON 换成 Jackson 3（`tools.jackson`），而本组件不依赖宿主 Jackson，装配不受影响；Framework 7 与 Servlet 6.1 的组合尚待示例工程认证后转正 |
 
 - **JDK**：发布物字节码为 Java 8，任意 Boot 2 宿主 JDK ≥ 8；Boot 3 宿主跟随
   Spring Framework 6 要求 JDK ≥ 17。
